--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zepox TV | Home</title>
+    <title>Zepox TV | TV Edition</title>
 
     <link rel="icon" type="image/jpeg" href="logo.jpg">
-    <link rel="apple-touch-icon" href="logo.jpg">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
 
@@ -22,141 +19,122 @@
             font-family: 'Inter', sans-serif;
         }
 
+        /* Menu inavyokaa */
+        #sidebar {
+            transition: transform 0.3s ease;
+            z-index: 100;
+        }
+
+        /* Focus style kwa ajili ya Remote ya TV */
+        .channel-item:focus {
+            background-color: #2563eb !important;
+            border: 3px solid white !important;
+            outline: none;
+            transform: scale(1.02);
+        }
+
         .channel-list {
-            height: calc(100vh - 300px);
+            height: calc(100vh - 180px);
             overflow-y: auto;
-            scrollbar-width: thin;
+            scroll-behavior: smooth;
+            /* Inafanya scrolling iwe laini */
         }
 
         .video-js {
             width: 100% !important;
             height: 100% !important;
-            border-radius: 16px;
-            border: 1px solid #1e293b;
+            background-color: #000;
+        }
+
+        .zepox-watermark {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 50;
+            font-size: 14px;
+            font-weight: 900;
+            color: white;
+            background: rgba(37, 99, 235, 0.6);
+            padding: 5px 12px;
+            border-radius: 6px;
         }
 
         .active-channel {
-            background: linear-gradient(90deg, #2563eb, #1d4ed8) !important;
-            border-left: 4px solid #fff;
-            font-weight: 800;
-        }
-
-        .logo-box {
-            width: 45px;
-            height: 45px;
-            border-radius: 12px;
-            border: 2px solid #3b82f6;
-            object-fit: cover;
-        }
-
-        ::-webkit-scrollbar {
-            width: 5px;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #1e293b;
-            border-radius: 10px;
+            background: #1e40af !important;
+            border-left: 5px solid #60a5fa;
         }
     </style>
 </head>
 
 <body class="flex flex-col">
 
-    <header class="p-4 bg-slate-900 border-b border-slate-800 flex flex-wrap justify-between items-center gap-4">
-        <div class="flex items-center gap-3">
-            <img src="logo.jpg" alt="Z" class="logo-box"
-                onerror="this.outerHTML='<div class=\'w-[45px] h-[45px] bg-blue-600 rounded-xl flex items-center justify-center font-bold text-xl\'>Z</div>'">
-            <div>
-                <h1 class="text-xl font-black italic text-blue-500 tracking-tighter uppercase">ZEPOX <span
-                        class="text-white">TV</span></h1>
-                <div id="clock" class="text-[10px] text-blue-400 font-mono font-bold">00:00:00 EAT</div>
-            </div>
+    <header class="p-4 bg-slate-900 border-b border-slate-800 flex justify-between items-center shadow-2xl">
+        <div class="flex items-center gap-4">
+            <button id="menuBtn" onclick="toggleMenu()" class="bg-blue-600 p-2 rounded-lg focus:ring-4 ring-white">
+                <span class="font-bold text-sm">CHANNELS</span>
+            </button>
+            <h1 class="text-xl font-black italic text-blue-500 uppercase">ZEPOX <span class="text-white">TV</span></h1>
         </div>
-
-        <div class="flex flex-1 max-w-xl gap-2 bg-slate-950 p-1.5 rounded-2xl border border-slate-800">
-            <input type="text" id="userInput" placeholder="Paste link mpya hapa..."
-                class="bg-transparent flex-1 p-2 text-sm outline-none text-white font-medium">
-            <button onclick="handleInput()"
-                class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded-xl text-xs font-bold transition-all">RUN</button>
-        </div>
+        <div id="clock" class="text-sm font-mono text-blue-400 font-bold">00:00:00 EAT</div>
     </header>
 
-    <nav class="bg-slate-950 p-3 flex gap-3 overflow-x-auto border-b border-slate-800 scrollbar-hide">
-        <button onclick="filterCategory('all', this)"
-            class="category-btn px-5 py-2 rounded-xl text-[10px] font-black bg-blue-600">ZOTE</button>
-        <button onclick="filterCategory('zepox', this)"
-            class="category-btn px-5 py-2 rounded-xl text-[10px] font-black bg-slate-900 border border-blue-500/30">⭐
-            ZEPOX SPECIAL</button>
-        <button onclick="filterCategory('tanzania', this)"
-            class="category-btn px-5 py-2 rounded-xl text-[10px] font-black bg-slate-900 border border-white/5">🇹🇿
-            TANZANIA</button>
-    </nav>
-
-    <main class="flex flex-1 overflow-hidden">
-        <aside class="w-80 bg-slate-950/50 p-4 hidden md:flex flex-col border-r border-slate-800">
+    <main class="flex flex-1 overflow-hidden relative">
+        <aside id="sidebar"
+            class="w-80 bg-slate-950 border-r border-slate-800 flex flex-col p-4 absolute md:relative h-full">
             <input type="text" id="search" onkeyup="searchChannels()"
-                class="w-full bg-slate-900/50 p-3 rounded-xl text-sm outline-none border border-slate-800 mb-4 focus:border-blue-500"
+                class="w-full bg-slate-900 p-3 rounded-xl text-sm outline-none border border-slate-800 focus:border-blue-600 mb-4"
                 placeholder="Tafuta channel...">
-            <div id="channel-container" class="channel-list space-y-1">
-                <p class="text-xs text-slate-500 italic text-center mt-10">Inapakia...</p>
+
+            <div id="channel-container" class="channel-list space-y-2">
             </div>
         </aside>
 
-        <section class="flex-1 p-4 bg-black flex flex-col items-center justify-center relative">
-            <div id="player-wrapper"
-                class="w-full h-full max-h-[82vh] bg-slate-900 rounded-2xl overflow-hidden border border-white/5 shadow-2xl">
-                <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline></video>
-            </div>
-            <p class="mt-3 text-[10px] text-slate-500 uppercase font-bold tracking-[0.2em]">Zepox Cloud Engine - Low RAM
-                Mode</p>
+        <section class="flex-1 bg-black relative">
+            <div class="zepox-watermark">ZEPOX TV</div>
+            <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline></video>
         </section>
     </main>
 
     <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
     <script>
         const player = videojs('my-video');
-        const PROXY = "https://api.allorigins.win/raw?url=";
+        const ZEPOX_URL = "https://a0504dae9c72cdb02b00ddedf6df4973.livehwc4.com/pullsgp.yyzb456.top/live/stream-698168_lhd.m3u8?sub_m3u8=true&edge_slice=true&user_session_id=8c55b0e9e2ac74d562bc04f0d4394478";
+        let allChannels = [{ name: "⭐ ZEPOX TV OFFICIAL 1", url: ZEPOX_URL }];
 
-        // --- LINK YAKO ULIKOTUMA NIMEIWEKA HAPA ---
-        const ZEPOX_OFFICIAL_URL = "https://a0504dae9c72cdb02b00ddedf6df4973.livehwc4.com/pullsgp.yyzb456.top/live/stream-698168_lhd.m3u8?sub_m3u8=true&edge_slice=true&user_session_id=8c55b0e9e2ac74d562bc04f0d4394478";
+        // --- REMOTE CONTROL OPTIMIZATION ---
+        window.addEventListener('keydown', function (e) {
+            const list = document.getElementById('channel-container');
+            if (e.key === "PageDown") {
+                list.scrollTop += 500; // Scroll kwa kasi zaidi chini
+            } else if (e.key === "PageUp") {
+                list.scrollTop -= 500; // Scroll kwa kasi zaidi juu
+            }
+        });
 
-        let allChannels = [
-            { name: "⭐ ZEPOX TV OFFICIAL", url: ZEPOX_OFFICIAL_URL }
-        ];
-        let currentFiltered = [];
-
-        function updateClock() {
-            const options = { timeZone: 'Africa/Dar_es_Salaam', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false };
-            document.getElementById('clock').innerText = new Date().toLocaleTimeString('en-GB', options) + " EAT";
+        function toggleMenu() {
+            const sb = document.getElementById('sidebar');
+            sb.style.display = (sb.style.display === 'none') ? 'flex' : 'none';
         }
-        setInterval(updateClock, 1000); updateClock();
 
         async function init() {
+            renderChannels(allChannels);
+            playChannel(ZEPOX_URL);
+
             try {
-                // Tunapakia channel za TZ pia
-                const response = await fetch('https://iptv-org.github.io/iptv/countries/tz.m3u');
-                const data = await response.text();
+                const res = await fetch('https://iptv-org.github.io/iptv/index.m3u');
+                const data = await res.text();
                 parseM3U(data);
-
-                currentFiltered = allChannels;
                 renderChannels(allChannels);
-
-                // Anza kwa kucheza channel yako ya Zepox moja kwa moja
-                playChannel(ZEPOX_OFFICIAL_URL);
-            } catch (e) {
-                renderChannels(allChannels); // Ikishindwa ku-fetch, onyesha angalau channel yako
-            }
+            } catch (e) { console.log("List Error"); }
         }
 
         function parseM3U(data) {
             const lines = data.split('\n');
             let current = {};
             for (let line of lines) {
-                line = line.trim();
-                if (line.startsWith('#EXTINF:')) {
-                    current.name = line.split(',')[1] || "Unknown Channel";
-                } else if (line.startsWith('http')) {
-                    current.url = line;
+                if (line.startsWith('#EXTINF:')) current.name = line.split(',')[1].trim();
+                else if (line.startsWith('http')) {
+                    current.url = line.trim();
                     if (current.name && !allChannels.some(c => c.url === current.url)) {
                         allChannels.push({ ...current });
                     }
@@ -167,11 +145,17 @@
 
         function renderChannels(channels) {
             const container = document.getElementById('channel-container');
-            container.innerHTML = channels.map(ch => `
-                <div onclick="playChannel('${ch.url}', this)" 
-                     class="${ch.url === ZEPOX_OFFICIAL_URL ? 'bg-blue-900/30' : ''} p-3 hover:bg-slate-800 rounded-xl cursor-pointer truncate text-[11px] font-semibold border-b border-slate-900/50 flex items-center gap-3 transition-all">
+            // TBC na Zepox kwanza
+            const sorted = [...channels].sort((a, b) => {
+                if (a.name.includes("ZEPOX") || a.name.includes("TBC")) return -1;
+                return 0;
+            });
+
+            container.innerHTML = sorted.map(ch => `
+                <button onclick="playChannel('${ch.url}', this)" 
+                     class="channel-item w-full p-4 bg-slate-900/50 hover:bg-slate-800 rounded-xl cursor-pointer truncate text-left text-sm flex items-center gap-3 transition-all border border-transparent">
                     <span class="text-blue-500">▶</span> ${ch.name}
-                </div>
+                </button>
             `).join('');
         }
 
@@ -182,34 +166,21 @@
             }
             player.src({ src: url, type: 'application/x-mpegURL' });
             player.play().catch(() => {
-                // Proxy fallback
                 player.src({ src: "https://corsproxy.io/?" + encodeURIComponent(url), type: 'application/x-mpegURL' });
                 player.play();
             });
         }
 
-        function filterCategory(cat, btn) {
-            document.querySelectorAll('.category-btn').forEach(b => b.classList.replace('bg-blue-600', 'bg-slate-900'));
-            btn.classList.replace('bg-slate-900', 'bg-blue-600');
-
-            if (cat === 'all') currentFiltered = allChannels;
-            else if (cat === 'zepox') currentFiltered = allChannels.filter(ch => ch.url === ZEPOX_OFFICIAL_URL);
-            else if (cat === 'tanzania') currentFiltered = allChannels.filter(ch => /tanzania|tz|tbc|itv|clouds|wasafi/i.test(ch.name));
-
-            renderChannels(currentFiltered);
-        }
-
         function searchChannels() {
             const q = document.getElementById('search').value.toLowerCase();
-            const f = currentFiltered.filter(ch => ch.name.toLowerCase().includes(q));
-            renderChannels(f);
+            renderChannels(allChannels.filter(ch => ch.name.toLowerCase().includes(q)));
         }
 
-        async function handleInput() {
-            const val = document.getElementById('userInput').value.trim();
-            if (!val) return;
-            playChannel(val);
-        }
+        // Clock
+        setInterval(() => {
+            const options = { timeZone: 'Africa/Dar_es_Salaam', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false };
+            document.getElementById('clock').innerText = new Date().toLocaleTimeString('en-GB', options) + " EAT";
+        }, 1000);
 
         init();
     </script>
